report/report.css
@font-face {
    font-family: 'KlinicSlabBook';
    font-style: normal;
    font-weight: normal;
    src: url(fonts/KlinicSlabBook.otf);
}
@font-face {
    font-family: 'KlinicSlabBook';
    font-style: italic;
    font-weight: normal;
    src: url(fonts/KlinicSlabBookIt.otf);
}
@font-face {
    font-family: 'KlinicSlabBook';
    font-style: normal;
    font-weight: bold;
    src: url(fonts/KlinicSlabMedium.otf);
}
@font-face {
    font-family: 'KlinicSlabMedium';
    font-style: normal;
    font-weight: bold;
    src: url(fonts/KlinicSlabMedium.otf);
}

@page {
    size: A4;
    background-color: #ffffff;
    @bottom-center {
        font-family: KlinicSlabBook, serif;
        font-size: 1em;
        content: counter(page);
      }
}

html {
    font-family: serif;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%
}

body {
    line-height: 1.3;
    margin: 0 auto;
    max-width: 700px;
    background: #ffffff;
    color: rgba(0, 0, 0, 0.9);
    font-family: KlinicSlabBook, serif;
    padding: 10px 20px;
    display: block;
    -webkit-font-smoothing: antialiased;
    font-size: large;
}

h1, h2, h3, h4, h5, h6 {
    font-family: KlinicSlabMedium, serif
}

h1.title {
    font-size: xx-large;
    line-height: 120%;
    margin-top: 1.5em;
}

h1 {
    font-size: x-large;
    margin-top: 1.5em;
}

h2, h3, h4, h5, h6 {
    font-size: large;
}

h1:first-child, h2:first-child, h3:first-child, h4:first-child {
    margin-top: 0
}

p.author {
    font-style: italic;
    font-size: smaller;
    line-height: .3em;
}

a:focus {
    outline: thin dotted
}

a:active, a:hover {
    outline: 0
}

a {
    color: #07c;
    text-decoration: none
}

a:visited {
    color: #4A6B82
}

a:hover {
    text-decoration: underline
}

abbr, acronym {
    border-bottom: 1px dotted #aaa
}

b, strong {
    font-weight: bold
}

dfn {
    font-style: italic
}

code, kbd, pre, samp {
    font-family: monospace, serif
}

pre {
    white-space: pre;
    white-space: pre-wrap;
    word-wrap: break-word
}

q {
    quotes: "\201C" "\201D" "\2018" "\2019"
}

sub, sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline
}

sup {
    top: -0.5em
}

sub {
    bottom: -0.25em
}

figure {
    margin: 0
}

img {
    max-width: 100%;
    height: auto
}

dt {
    font-weight: bold
}

dd {
    font-style: italic
}

ul, ol, dl, dialog {
    line-height: 20px;
    margin-top: 18px;
    margin-bottom: 18px
}

li ul, li ol, ul ul, ol ol {
    top: 0;
    margin-top: 0;
    margin-bottom: 0
}

li h1, li h2, li h3, li h4, li h5, li h6, li p {
    top: 0
}

li>p:first-of-type {
    margin: 0
}

li>p+p {
    margin-top: 16px
}

form, legend, label {
    font-size: smaller;
    line-height: 18px
}

caption, figcaption {
    font-size: small;
    line-height: 18px
}

caption span, figcaption span {
    font-weight: bold;
}

blockquote {
    border: 1px dotted #ccc;
    border-right: none;
    border-left: none;
    color: rgba(0, 0, 0, 0.7);
    font-family: KlinicSlabMedium, serif;
    line-height: 25px;
    margin-top: 25px
}

blockquote p {
    margin: 20px 0 25px;
    padding: 0 15px;
    line-height: 25px
}

ul, ol {
    color: rgba(0, 0, 0, 0.7)
}

ol {
    list-style-type: decimal
}

hr {
    height: 4px;
    margin: 18px 0 14px 0
}

table {
    border-collapse: collapse;
    border-spacing: 0;
    border-top: solid 1px #000;
    border-bottom: solid 1px #000;
    margin-top: 18px;
    width: 100%;
    font-size: smaller;
}

table th, table td {
    line-height: 15px;
    padding: 10px 18px 8px 0
}

table thead th, table thead td {
    font-weight: bold;
    padding-top: 7px
}

table tfoot th, table tfoot td {
    padding-bottom: 8px
}

table th:first-child, table td:first-child {
    padding-left: 0
}

table th:last-child, table td:last-child {
    padding-right: 0
}

table tbody tr:nth-child(odd) th, table tbody tr:nth-child(odd) td {
    background: rgba(0, 0, 0, 0.035)
}

table caption {
    top: 5px;
    margin-bottom: 18px
}

